modifications on setup screen partially to align to brand, solving uppercase on email, adding guard to avoid back(partial)

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,6 +1,6 @@
 ion-content{
   --background : none;
-  background: url(/assets/bg/bg_720x1480.jpg) center bottom;
+  background: url(/assets/bg/bg_chips_c_100.jpg) center bottom;
   background-size: cover;
 
 }
