--- a/src/app/pages/recover-mnemonic/recover-mnemonic.page.scss
+++ b/src/app/pages/recover-mnemonic/recover-mnemonic.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-  --background: url(/assets/bg/image_pin_720x1480_.jpg) center bottom ;
+  --background: url(/assets/bg/bg_chips_c_100.jpg) center bottom;
   background-size: cover;
   min-height: 100%;
   display: flex;
